--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span class="company-name">House of Code</span>
     </a>
 
-    <!-- Navbar -->
+    <!-- Desktop Navbar -->
     <nav class="navbar" aria-label="Main Navigation">
       <ul class="nav-list">
         <li><a href="#">Home</a></li>
@@ -39,13 +39,23 @@
     <!-- CTA Button -->
     <a href="#contact" class="header-btn">Get Started</a>
 
-    <!-- Mobile Menu Toggle -->
-    <button class="menu-toggle" aria-label="Toggle Navigation">
+    <!-- Mobile Menu Toggle (Hamburger) -->
+    <button class="menu-toggle" aria-label="Toggle Menu">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </button>
   </div>
+
+  <!-- Mobile Nav -->
+  <nav class="mobile-nav">
+    <a href="#why-choose">Why Choose Us</a>
+    <a href="#services">Services</a>
+    <a href="#process">Process</a>
+    <a href="#about">About</a>
+    <a href="#support-packages">Packages</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
 
